# AdString

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
Documentation/: Makefile  make.bat
Documentation/source/: conf.py  glossary.rst  index.rst
Documentation/source/reference/: ad-string.rst  ad_string.rst  custom-memory-management.rst  index.rst  string-modification.rst
Documentation/source/reference/ad-string/: ad-string.rst
Documentation/source/reference/ad-string/functions/: ad-c-string-deallocate-with-allocator.rst  ad-c-string-deallocate.rst  ad-codepoint-iterator-end.rst  ad-codepoint-iterator-get-index.rst  ad-codepoint-iterator-get-string.rst  ad-codepoint-iterator-next.rst  ad-codepoint-iterator-prior.rst  ad-codepoint-iterator-set-string.rst  ad-codepoint-iterator-start.rst  ad-string-add.rst  ad-string-allocate.rst  ad-string-append-c-string.rst  ad-string-append.rst  ad-string-as-c-string.rst  ad-string-assign.rst  ad-string-copy.rst  ad-string-deallocate.rst  ad-string-destroy.rst  ad-string-ends-with.rst  ad-string-find-first-char.rst  ad-string-find-first-string.rst  ad-string-find-last-char.rst  ad-string-find-last-string.rst  ad-string-from-buffer-with-allocator.rst  ad-string-from-buffer.rst  ad-string-from-c-string-with-allocator.rst  ad-string-from-c-string.rst  ad-string-get-capacity.rst  ad-string-get-contents-const.rst  ad-string-get-contents.rst  ad-string-get-count.rst  ad-string-initialise-with-allocator.rst  ad-string-initialise.rst  ad-string-range-check.rst  ad-string-remove.rst  ad-string-replace.rst  ad-string-reserve.rst  ad-string-starts-with.rst  ad-string-substring.rst  ad-string-to-c-string-with-allocator.rst  (+2 more)
Documentation/source/reference/ad-string/types/: ad-codepoint-iterator.rst  ad-maybe-char32.rst  ad-maybe-int.rst  ad-maybe-string.rst  ad-memory-block.rst  ad-string-range.rst  ad-string.rst
Documentation/source/reference/aft-string/: aft-string.rst
Documentation/source/reference/aft-string/functions/: aft-allocate.rst  aft-c-string-deallocate-with-allocator.rst  aft-c-string-deallocate.rst  aft-deallocate.rst  aft-string-add.c  aft-string-add.rst  aft-string-append-c-string.c  aft-string-append-c-string.rst  aft-string-append.c  aft-string-append.rst  aft-string-assign.c  aft-string-assign.rst  aft-string-copy.c  aft-string-copy.rst  aft-string-destroy.c  aft-string-destroy.rst  aft-string-ends-with.c  aft-string-ends-with.rst  aft-string-find-first-char.c  aft-string-find-first-char.rst  aft-string-get-contents-const.rst  aft-string-get-contents.rst  aft-string-initialise-with-allocator.rst  aft-string-initialise.rst  aft-string-range-check.rst  aft-string-reserve.rst  aft-string-starts-with.rst  aft-string-substring.rst  aft-strings-match.rst
Documentation/source/reference/aft-string/types/: aft-codepoint-iterator.rst  aft-string-slice.rst  aft-string.rst
Source/: AftStringConfig.cmake  CMakeLists.txt  ad_number_format.c  ad_number_format.h  ad_string.c  ad_string.h  aft_number_format.c  aft_number_format.h  aft_string.c  aft_string.h  aft_string_config.h.in  big_int.c  big_int.h  floating_point_format.c  floating_point_format.h
Source/Include/AftString/: aft_number_format.h  aft_string.h
Test/: CMakeLists.txt
Test/Basic/: main.c
Test/Big Int/: main.c
Test/Json/: filesystem.c  filesystem.h  filesystem_posix.c  filesystem_windows.c  handmade.json  json.c  json.h  json_deserialize.c  json_serialize.c  main.c  omdb.json
Test/Number Format/: main.c
Test/Utility/: random.c  test.c  test.h
test_package/: conanfile.py  example.cpp
